feat: java 버전 변경
더 많은 지원을 위해 java 버전을 21에서 17로 변경
테스트 코드 수정